<resources>
    <string name="app_name">Gestion Empresarial</string>
    <string name="numero_legajo">Numero legajo: </string>
    <string name="nombre">Nombre: </string>
    <string name="apellido">Apellido: </string>
    <string name="email">Email: </string>
    <string name="tel_fono">Teléfono: </string>
    <string name="calle">Calle: </string>
    <string name="n_mero">Número: </string>
    <string name="ciudad">Ciudad: </string>
    <string name="pa_s">País: </string>
    <string name="register">Registar</string>
    <string name="update">Actualizar</string>
    <string name="delete">Eliminar</string>
    <string name="back">Volver</string>
    <string name="llamar">Llamar</string>
    <string name="ver_ubicacion">Ver ubicacion</string>
    <string name="save">Guardar</string>
    <string name="edit">Editar</string>
    <string name="cancel">Cancelar</string>
    <string name="usuario">Usuario</string>
    <string name="enviar_mail">E-mail</string>
    <string name="no_hay_empleados_registrados">No hay empleados registrados</string>
    <string name="mi_perfil">Mi perfil</string>
    <string name="registrar_empleado">Registrar empleado</string>
    <string name="ver_nomina">Ver nómina</string>
    <string name="desloguearse">Desloguearse</string>
    <string name="password">Contraseña</string>
    <string name="registrate">Registrate</string>
    <string name="login">Login</string>
</resources>