<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.RegisterUserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">

        <EditText
            android:id="@+id/et_telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tel_fono"/>
        <EditText
            android:id="@+id/et_calle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/calle"/>
        <EditText
            android:id="@+id/et_numero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/n_mero"/>
        <EditText
            android:id="@+id/et_ciudad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ciudad"/>
        <EditText
            android:id="@+id/et_pais"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pa_s"/>
        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/blanco"/>

    </LinearLayout>

</LinearLayout>