<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/MyEditTextHintStyle"
            app:boxBackgroundColor="@android:color/transparent" >
            <EditText
                android:id="@+id/et_legajo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/numero_legajo"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/MyEditTextHintStyle"
            app:boxBackgroundColor="@android:color/transparent" >
            <EditText
                android:id="@+id/et_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/MyEditTextHintStyle"
            app:boxBackgroundColor="@android:color/transparent" >
            <EditText
                android:id="@+id/et_apellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/apellido"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/MyEditTextHintStyle"
            app:boxBackgroundColor="@android:color/transparent" >
            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/MyEditTextHintStyle"
            app:boxBackgroundColor="@android:color/transparent" >
            <EditText
                android:id="@+id/et_telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tel_fono"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/MyEditTextHintStyle"
            app:boxBackgroundColor="@android:color/transparent" >
            <EditText
                android:id="@+id/et_calle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/calle"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/MyEditTextHintStyle"
            app:boxBackgroundColor="@android:color/transparent" >
            <EditText
                android:id="@+id/et_numero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/n_mero"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/MyEditTextHintStyle"
            app:boxBackgroundColor="@android:color/transparent" >
            <EditText
                android:id="@+id/et_ciudad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ciudad"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/MyEditTextHintStyle"
            app:boxBackgroundColor="@android:color/transparent" >
            <EditText
                android:id="@+id/et_pais"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pa_s"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/MyEditTextHintStyle"
            app:boxBackgroundColor="@android:color/transparent" >
            <Button
                android:id="@+id/btn_register_employee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/blanco"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</LinearLayout>