<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_noeditable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:visibility="gone">
        <TextView
            android:id="@+id/tv_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Usuario"/>
        <TextView
            android:id="@+id/tv_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nombre"/>
        <TextView
            android:id="@+id/tv_apellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Apellido"/>
        <TextView
            android:id="@+id/tv_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="Contraseña"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_editable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:visibility="gone">
        <TextView
            android:id="@+id/et_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Usuario"/>

        <EditText
            android:id="@+id/et_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nombre"/>
        <EditText
            android:id="@+id/et_apellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Apellido"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="Contraseña"/>

        <LinearLayout
            android:id="@+id/save_cancel_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center">

            <Button
                android:id="@+id/btn_guardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textColor="@color/blanco"/>
            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textColor="@color/blanco"/>

        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/ll_buttons">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_editar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:textColor="@color/blanco"/>
            <Button
                android:id="@+id/btn_eliminar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:textColor="@color/blanco"/>
            <Button
                android:id="@+id/btn_salir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:textColor="@color/blanco"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>