<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_editable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:layout_margin="@dimen/padding_20"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/padding_20"
                android:hint="@string/numero_legajo"/>
            <EditText
                android:id="@+id/et_legajo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/padding_20"
                android:hint="@string/numero_legajo"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/padding_20"
                android:hint="@string/nombre"/>
            <EditText
                android:id="@+id/et_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/padding_20"
                android:hint="@string/nombre"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/padding_20"
                android:hint="@string/apellido"/>
            <EditText
                android:id="@+id/et_apellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/padding_20"
                android:hint="@string/apellido"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/padding_20"
                android:hint="@string/email"/>
            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/padding_20"
                android:hint="@string/email"/>
        </LinearLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/padding_20"
                android:hint="@string/tel_fono"/>
            <EditText
                android:id="@+id/et_telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/padding_20"
                android:hint="@string/tel_fono"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/padding_20"
                android:hint="@string/calle"/>
            <EditText
                android:id="@+id/et_calle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/padding_20"
                android:hint="@string/calle"/>>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/padding_20"
                android:hint="@string/n_mero"/>
            <EditText
                android:id="@+id/et_numero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/padding_20"
                android:hint="@string/n_mero"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/padding_20"
                android:hint="@string/ciudad"/>
            <EditText
                android:id="@+id/et_ciudad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/padding_20"
                android:hint="@string/ciudad"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/padding_20"
                android:hint="@string/pa_s"/>
            <EditText
                android:id="@+id/et_pais"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/padding_20"
                android:hint="@string/pa_s"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:textColor="@color/blanco"/>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_noeditable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:layout_margin="@dimen/padding_20">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/padding_20"
                android:hint="@string/numero_legajo"/>
            <TextView
                android:id="@+id/tv_legajo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/padding_20"
                android:hint="@string/numero_legajo"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/padding_20"
                android:hint="@string/nombre"/>
            <TextView
                android:id="@+id/tv_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/padding_20"
                android:hint="@string/nombre"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/padding_20"
                android:hint="@string/apellido"/>
            <TextView
                android:id="@+id/tv_apellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/padding_20"
                android:hint="@string/apellido"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/padding_20"
            android:hint="@string/email"/>
        <TextView
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/padding_20"
            android:hint="@string/email"/>>
        </LinearLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/padding_20"
                android:hint="@string/tel_fono"/>
            <TextView
                android:id="@+id/tv_telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/padding_20"
                android:hint="@string/tel_fono"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/padding_20"
                android:hint="@string/calle"/>
            <TextView
                android:id="@+id/tv_calle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/padding_20"
                android:hint="@string/calle"/>>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/padding_20"
                android:hint="@string/n_mero"/>
            <TextView
                android:id="@+id/tv_numero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/padding_20"
                android:hint="@string/n_mero"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/padding_20"
                android:hint="@string/ciudad"/>
            <TextView
                android:id="@+id/tv_ciudad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/padding_20"
                android:hint="@string/ciudad"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/padding_20"
                android:hint="@string/pa_s"/>
            <TextView
                android:id="@+id/tv_pais"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/padding_20"
                android:hint="@string/pa_s"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:textColor="@color/blanco"/>
            <Button
                android:id="@+id/btn_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:textColor="@color/blanco"/>
            <Button
                android:id="@+id/btn_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:textColor="@color/blanco"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <Button
                android:id="@+id/btn_call"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/llamar"
                android:textColor="@color/blanco"/>
            <Button
                android:id="@+id/btn_maps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ver_ubicacion"
                android:textColor="@color/blanco"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>